# AnyBipe

./: .gitignore  LICENSE  README.md  anybipe.py  requirements.txt  setup.py
biped_ws/src/pointfoot-gazebo-ros/pointfoot_gazebo/: CMakeLists.txt  package.xml  pointfoot_hw_sim_plugins.xml
biped_ws/src/pointfoot-gazebo-ros/pointfoot_gazebo/config/: default_point_foot.yaml
biped_ws/src/pointfoot-gazebo-ros/pointfoot_gazebo/include/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
biped_ws/src/pointfoot-gazebo-ros/pointfoot_gazebo/include/pointfoot_gazebo/: PointFootHWSim.h
biped_ws/src/pointfoot-gazebo-ros/pointfoot_gazebo/launch/: empty_world.launch  empty_world_headless.launch  reset_pose.launch
biped_ws/src/pointfoot-gazebo-ros/pointfoot_gazebo/src/: PointFootHWSim.cpp
biped_ws/src/pointfoot-gazebo-ros/pointfoot_gazebo/worlds/: empty_world.world
biped_ws/src/pointfoot-gazebo-ros/pointfoot_sdk_sim/: CMakeLists.txt  package.xml
biped_ws/src/pointfoot-gazebo-ros/pointfoot_sdk_sim/include/limxsdk/: macros.h  pointfoot_sim.h
biped_ws/src/pointfoot-gazebo-ros/pointfoot_sdk_sim/lib/win/: pointfoot_sdk_sim.lib
biped_ws/src/pointfoot-sdk-lowlevel/: CMakeLists.txt  README.md  package.xml
biped_ws/src/pointfoot-sdk-lowlevel/examples/: CMakeLists.txt  pf_controller_base.cpp  pf_controller_base.h  pf_groupJoints_move.cpp  pf_joint_move.cpp
biped_ws/src/pointfoot-sdk-lowlevel/examples/common/: util.cpp  util.h
biped_ws/src/pointfoot-sdk-lowlevel/include/limxsdk/: apibase.h  datatypes.h  pointfoot.h
biped_ws/src/pointfoot-sdk-lowlevel/lib/win/: pointfoot_sdk_lowlevel.lib
biped_ws/src/pointfoot-sdk-lowlevel/python3/aarch64/: example.py
biped_ws/src/pointfoot-sdk-lowlevel/python3/aarch64/limxsdk/datatypes/: __init__.py
biped_ws/src/pointfoot-sdk-lowlevel/python3/aarch64/limxsdk/robot/: Rate.py
biped_ws/src/pointfoot-sdk-lowlevel/python3/amd64/limxsdk/datatypes/: DiagnosticValue.py  ImuData.py  RobotState.py
biped_ws/src/pointfoot-sdk-lowlevel/python3/amd64/limxsdk/robot/: RobotType.py  __init__.py
biped_ws/src/pointfoot-sdk-lowlevel/python3/win/limxsdk/datatypes/: RobotCmd.py  SensorJoy.py
biped_ws/src/pointfoot-sdk-lowlevel/python3/win/limxsdk/robot/: Robot.py  _robot.lib
biped_ws/src/rl-deploy-ros-cpp/robot_common/: CMakeLists.txt  package.xml
biped_ws/src/rl-deploy-ros-cpp/robot_common/include/robot_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
biped_ws/src/rl-deploy-ros-cpp/robot_controllers/: CMakeLists.txt  package.xml  robot_controllers_plugins.xml
biped_ws/src/rl-deploy-ros-cpp/robot_controllers/config/: controllers.yaml
biped_ws/src/rl-deploy-ros-cpp/robot_controllers/config/pointfoot/: params.yaml
biped_ws/src/rl-deploy-ros-cpp/robot_controllers/include/robot_controllers/: ControllerBase.h  PointfootController.h
biped_ws/src/rl-deploy-ros-cpp/robot_controllers/src/: ControllerBase.cpp  PointfootController.cpp
biped_ws/src/rl-deploy-ros-cpp/robot_hw/: CMakeLists.txt  package.xml
biped_ws/src/rl-deploy-ros-cpp/robot_hw/config/: joystick.yaml  robot_hw.yaml
biped_ws/src/rl-deploy-ros-cpp/robot_hw/include/robot_hw/: PointfootHW.h  RobotData.h  RobotHW.h  RobotHWLoop.h
biped_ws/src/rl-deploy-ros-cpp/robot_hw/launch/: pointfoot_hw.launch  pointfoot_hw_sim.launch  pointfoot_hw_sim_headless.launch
biped_ws/src/rl-deploy-ros-cpp/robot_hw/src/: PointfootHW.cpp  RobotHW.cpp  RobotHWLoop.cpp  pointfootNode.cpp  state2traj.py
biped_ws/src/robot-description/: CMakeLists.txt  package.xml
biped_ws/src/robot-description/pointfoot/meshes/: abad_L_Link.STL  abad_R_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL  test.py
biped_ws/src/robot-description/pointfoot/urdf/: robot.urdf
biped_ws/src/robot-description/pointfoot/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  ros2_control_interface.xacro  transmission.xacro
biped_ws/src/robot-visualization/: CMakeLists.txt  package.xml
biped_ws/src/robot-visualization/lib/foxy/controller_msgs/include/controller_msgs/msg/: imu_data.hpp  joint_cmd.hpp  joint_state.h  joint_state.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h
biped_ws/src/robot-visualization/lib/foxy/controller_msgs/share/controller_msgs/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
biped_ws/src/robot-visualization/lib/foxy/mrosbridger/share/mrosbridger/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
biped_ws/src/robot-visualization/lib/humble/controller_msgs/share/controller_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
biped_ws/src/robot-visualization/lib/humble/controller_msgs/share/controller_msgs/msg/: IMUData.idl  JointCmd.idl  JointCmd.msg  JointState.idl
biped_ws/src/robot-visualization/lib/humble/mrosbridger/share/mrosbridger/: package.dsv  package.ps1  package.sh  package.zsh
biped_ws/src/robot-visualization/lib/iron/controller_msgs/share/controller_msgs/: local_setup.dsv  package.bash  package.dsv  package.sh  package.zsh
biped_ws/src/robot-visualization/lib/iron/controller_msgs/share/controller_msgs/msg/: IMUData.json  IMUData.msg  JointCmd.json  JointState.json  JointState.msg
biped_ws/src/robot-visualization/lib/iron/mrosbridger/share/mrosbridger/: local_setup.dsv  local_setup.sh  package.bash  package.sh
biped_ws/src/robot-visualization/lib/iron/mrosbridger/share/mrosbridger/launch/: mrosbridger.launch.py
biped_ws/src/robot-visualization/ros1/launch/: pointfoot_plot_hw.launch  pointfoot_plot_sim.launch  pointfoot_rviz_hw.launch
biped_ws/src/robot-visualization/ros1/layout/: pointfoot.xml
biped_ws/src/robot-visualization/ros1/rviz/: pointfoot.rviz
biped_ws/src/robot-visualization/ros2/launch/: pointfoot_plot_hw.launch.py  pointfoot_plot_sim.launch.py  pointfoot_rviz_hw.launch.py
biped_ws/src/robot-visualization/ros2/rviz/: pointfoot.rviz
cfg/: config.yaml
utils/: misc.py  (+3 more)
(+175 files in other folders)
