<?xml version="1.0"?>
<package format="3">
  <name>mrosbridger</name>
  <version>0.9.7</version>
  <description>A simple bridge between MROS and ROS</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_index_python</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>rosidl_parser</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>python3-yaml</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>

  <buildtool_export_depend>pkg-config</buildtool_export_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <group_depend>rosidl_interface_packages</group_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
